# dump-analyzer

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/app/: app.cpp  app.h  args.cpp  args.h
src/data/: data.cpp  data.h
src/parse/: parse.cpp  parse.h
src/utils/: forest.h  fs_utils.cpp  fs_utils.h  reader.h
